--- a/assets/index.html
+++ b/assets/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>Socket.IO Chat Example</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-  <link rel="stylesheet" href="./assets/style.css">
+  <link rel="stylesheet" href="./style.css">
 </head>
 <body>
   <ul class="pages">
@@ -24,8 +24,8 @@
     </li>
   </ul>
 
-  <script src="./assets/jquery.min.js"></script>
-  <script src="./assets/socket.io.js"></script>
-  <script src="./assets/main.js?v=qweqwe"></script>
+  <script src="./jquery.min.js"></script>
+  <script src="./socket.io.js"></script>
+  <script src="./main.js?v=qweqwe"></script>
 </body>
 </html>
